fix: logs page dark mode issue

--- a/web/src/styles/_variables.scss
+++ b/web/src/styles/_variables.scss
@@ -238,6 +238,13 @@ $o2-dark-teal-900: #9BDDD6;
 $theme-color: #3F7994;
 $dark-theme-color: #3F7994;
 
+$body-primary-bg: rgba(89, 155, 174, 0.01);
+$body-secondary-bg: rgba(89, 155, 174, 0.4);
+
+$menu-gradient-start: rgba(89, 155, 174, 0.04);
+$menu-gradient-end: rgba(89, 155, 174, 0.08);
+$menu-border-color: rgba(89, 155, 174, 0.6);
+
 // Semantic Colors - Light Mode
 :root {
   // Backgrounds
@@ -263,7 +270,7 @@ $dark-theme-color: #3F7994;
   // Interactive Elements
   --o2-primary-color: #{$o2-iris-1100};     // Primary actions/buttons
   --o2-primary-foreground: #{$o2-gray-100}; // Text on primary color
-  --o2-hover-accent: #{$o2-iris-400};       // Hover state accent
+  --o2-hover-accent: color-mix(in srgb, #{$theme-color} 30%, white);       // Hover state accent
   --o2-destructive-foreground: #{$o2-gray-100}; // Text on destructive buttons
   --o2-focus-ring: #{$o2-iris-1200};        // Focus state indicator
   --hover-shadow: rgba(0, 0, 0, 0.3);
@@ -276,6 +283,9 @@ $dark-theme-color: #3F7994;
 
   --o2-theme-color: #{$theme-color};
 
+  --o2-body-primary-bg: #{$body-primary-bg};
+  --o2-body-secondary-bg: #{$body-secondary-bg};
+
   --o2-primary-btn-bg: color-mix(in srgb, var(--o2-theme-color) 100%, white);
   --o2-primary-btn-text: #{$o2-gray-100};
 
@@ -285,6 +295,14 @@ $dark-theme-color: #3F7994;
   --o2-card-bg: rgba(255, 255, 255, 0.8);
 
   --o2-border-color: rgba(0, 0, 0, 0.12);
+  --o2-box-shadow: 0px 0px rgba(0, 0, 0, 0.2), 0 0.063rem 0.063rem rgba(0, 0, 0, 0.14), 0 3px 0.063rem -3px rgba(0, 0, 0, 0.12)
+
+  --o2-menu-gradient-start: #{$menu-gradient-start};
+  --o2-menu-gradient-end: #{$menu-gradient-end};
+  --o2-menu-border-color: #{$menu-border-color};
+  --o2-menu-color: #{$theme-color};
+
+  --o2-table-header-bg: color-mix(in srgb, #{$theme-color} 20%, white);
 }
 
 // Semantic Colors - Dark Mode
@@ -312,7 +330,7 @@ $dark-theme-color: #3F7994;
   // Interactive Elements
   --o2-primary-color: #{$o2-dark-iris-1000};  // Primary actions
   --o2-primary-foreground: #{$o2-dark-gray-100}; // Text on primary
-  --o2-hover-accent: #{$o2-dark-iris-1000};   // Hover accents
+  --o2-hover-accent: color-mix(in srgb, #{$theme-color} 50%, black);   // Hover accents
   --o2-destructive-foreground: #{$o2-dark-gray-100}; // Destructive text
   --o2-focus-ring: #{$o2-dark-iris-600};      // Focus indicators
   --hover-shadow: rgba(0, 0, 0, 0.6);
@@ -325,6 +343,9 @@ $dark-theme-color: #3F7994;
 
   --o2-theme-color: #{$dark-theme-color};
 
+  --o2-body-primary-bg: #{$body-primary-bg};
+  --o2-body-secondary-bg: #{$body-secondary-bg};
+
   --o2-primary-btn-bg: color-mix(in srgb, var(--o2-theme-color) 90%, white);
   --o2-primary-btn-text: #{$o2-gray-1400};
 
@@ -334,4 +355,12 @@ $dark-theme-color: #3F7994;
   --o2-card-bg: rgba(0, 0, 0, 0.8);
 
   --o2-border-color: rgba(255, 255, 255, 0.40);
+  --o2-box-shadow: 0px 0px rgba(0, 0, 0, 0.2), 0 0.063rem 0.063rem rgba(0, 0, 0, 0.14), 0 3px 0.063rem -3px rgba(0, 0, 0, 0.12)
+
+  --o2-menu-gradient-start: #{$menu-gradient-start};
+  --o2-menu-gradient-end: #{$menu-gradient-end};
+  --o2-menu-border-color: #{$menu-border-color};
+  --o2-menu-color: #{$theme-color};
+
+  --o2-table-header-bg: color-mix(in srgb, #{$theme-color} 5%, white);
 }
